--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/japan.ico" />
     <link href="style.css" rel="stylesheet" />
     
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@600&family=Dela+Gothic+One&family=Heebo:wght@600&family=Unica+One&display=swap" rel="stylesheet">
-    <title>Japanglish</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@600&family=Dela+Gothic+One&family=Heebo:wght@600&family=Potta+One&family=Rubik+Moonrocks&family=Unica+One&display=swap" rel="stylesheet">
+    <title>YanaNihongo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
